# FreshMeet

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  package.json  scratch.json
.github/workflows/: build.yml  ci.yaml  deploy.yaml  deploy_backend.yml  deploy_bot.yaml  deploy_vercel_preview.yml  deploy_vercel_production.yml  docker.yaml  rust.yaml  semantic_release.yml  semantic_release_deploy_backend.yml
api_test/: Dockerfile  script.sh
axum-backend/: Cargo.toml  fly.toml
axum-backend/src/: main.rs
axum-backend/src/meetup/: request.rs  response.rs
axum-backend/src/routes/: meetup.rs
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  api_spec.yaml  env.example  fly.prod.toml  fly.toml  open_api.json  open_api_spec.json  scratch.json
backend/src/: lib.rs  main.rs
backend/src/eventbrite/: info.rs  mod.rs  user.rs  utils.rs
backend/src/meetup/: mod.rs  request.rs  request_builder.rs  response.rs  search.rs  search_request.rs  search_types.rs
backend/src/meetup/query/: common.rs  event_search_with_series.rs  mod.rs  recommended_events_with_series.rs
backend/src/meetup/query/request/: gql2.rs  gql2_v2.rs  mod.rs
backend/src/meetup/request/: category_search.rs  category_search_builder.rs  common.rs  event_keyword_search.rs  event_keyword_search_builder.rs  get_your_events_suggested_events.rs  get_your_events_suggested_events_builder.rs  mod.rs  request.rs
backend/src/routes/: meetup.rs  mod.rs  tech_events.rs
backend/src/tests/: meetup.rs
backend/src/utils/: mod.rs
bot/: .air.toml  .env.example  Dockerfile  go.mod  go.sum  main.go
bot/commands/events/: events.go
bot/commands/meetup/: events.go  meetup.go
bot/commands/tech_events/: tech_events.go
bot/middware/: logger.go
bot/utils/: utils.go
frontend/: Cargo.toml  app.config.ts  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vite.config.ts.timestamp-1690942823663-96218b1317c49.mjs  vitest.config.ts
frontend.old/: README.md  package.json
frontend.old/src/routes/meetup/: board-games.tsx  tech.tsx  today.tsx
frontend/src/: app.tsx  backend_schema.d.ts  config.ts  environment.rs  environment.ts  localStorage.ts  logger.ts  main.rs  root.tsx  state.ts  utils.ts
frontend/src/components/: DatePicker.test.ts  DatePicker.tsx  Meetup.tsx  NavBar.css  NavBar.tsx  Navbar.tsx  Pagination.tsx  SearchBar.tsx  meetup.rs
frontend/src/pages/: bars.rs  mod.rs  tech_events.rs
frontend/src/routes/: index.tsx  meetup.tsx
frontend/src/routes/meetup/: bars.tsx  hackathons.tsx  suggested.tsx  tech.tsx  test.tsx  today.tsx
frontend/src/routes/meetups/: PaginationButtons.tsx  index.css  index.tsx  today.tsx  types.ts
leptos/: .gitignore
leptos/src/components/: meetup.rs
rocket/: .gitignore  Cargo.toml  fly.toml
rocket/src/: main.rs
rocket/src/eventbrite/: utils.rs
rust_bot/: .env.example  Cargo.toml
rust_bot/src/: main.rs
rust_bot/src/commands/: command.rs  meetup.rs  mod.rs  ping.rs  tech_events.rs
rust_bot/src/utils/: utils.rs
solid/: index.html  package-lock.json  package.json
solid-start/: package.json
solid/src/: App.tsx  root.tsx
solid/src/components/: Meetup.tsx
solid/src/routes/: meetup.tsx
src/: main.rs
src/eventbrite/: info.rs  mod.rs  search.rs  user.rs  utils.rs
src/meetup/: search.rs
svelte/: .prettierrc  README.md  package-lock.json  package.json
svelte/src/: app.html
svelte/src/components/: events.ts  meetupEvents.svelte
svelte/src/components/meetup/: Meetups.svelte  index.d.ts
svelte/src/components/pagination/: pagination.svelte
svelte/src/routes/: +layout.svelte  +page.svelte
svelte/src/routes/meetup/tech-events/: +page.svelte  +page.ts
types/: Cargo.toml
types/src/: lib.rs
types/src/meetup/: mod.rs  search_request.rs  search_response.rs
