[package]
name = "networking_accumlator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
chrono = "0.4.23"
