[package]
name = "fresh_meet"
version = "0.1.0-develop"
edition = "2021"


[dependencies]
anyhow = "1.0.72"
axum = "0.7.5"
axum-macros = "0.3.8"
bon = "2.1.1"
chrono = "0.4.26"
http-body = "1.0.1"
hyper = "1.4.1"
markdown = "1.0.0-alpha.18"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
schemars = "0.8.21"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.19"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = "5.2.0"
