[package]
name = "fresh_meet"
version = "0.1.0-develop"
edition = "2021"


[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
anyhow = "1.0.72"
bon = "3.3.2"
chrono = { version = "0.4.26", features = ["serde"] }
http-body = "1.0.1"
hyper = "1.4.1"
markdown = "1.0.0-alpha.18"
rayon = "1.10.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
schemars = "0.8.21"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.19"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.1.3"
urlencoding = "2.1.3"
chrono-tz = "0.10.1"

[dependencies.common-axum]
git = "https://github.com/shawnyu5/common-axum"
rev = "v1.3.0"
