[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
leptos = "0.3.0"
leptos_router = { version = "0.3.0", features = ["csr"] }
log = "0.4.18"
reqwest-wasm = { version = "0.11.16", features = ["json"] }
serde = "1.0.163"
web-sys = { version = "0.3.63", features = ["ScrollToOptions", "Window", "ScrollBehavior", "ScrollToOptions"] }
networking_accumlator_types = { version = "0.1.0", path = "../types", git = "https://github.com/shawnyu5/networking_accumulator" }
