[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.27.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-subscriber = "0.2"
