[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", features = ["cache", "framework", "standard_framework", "rustls_backend", "builder", "http"] }
tokio = { version = "1.27.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-subscriber = "0.2"
networking_accumlator = { path = "../backend"}
async-trait = "0.1.68"
chrono = "0.4.24"
once_cell = "1.17.1"
lazy_static = "1.4.0"
