[package]
name = "networking_accumlator_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "networking accumulator types"
homepage = "https://github.com/shawnyu5/networking_accumulator/tree/master/types"
repository = "https://github.com/shawnyu5/networking_accumulator/tree/master/types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0.163", features = ["derive"] }
